# ForgeMonorepo

./: .credentials.vault.example  .gitattributes  .gitignore  .prettierrc  .sops.yaml  .vercelignore  CODEOWNERS  CONTRIBUTING.md  CREDENTIALS.md  DEPLOYMENT_MANUAL.md  DEPLOYMENT_STATUS.md  GEMINI.md  MODELS_OFF_FLY_SETUP.md  MODEL_SERVER_DEPLOYMENT.md  ONBOARDING.md  README.md  VERCEL_DEPLOYMENT_SUMMARY.md  VERCEL_ENV_SETUP.md  decrypt-env.sh  deploy-goblin.sh  deploy-vercel.sh  encrypt-env.sh  forge.code-workspace  forgetm.db  goblins.yaml  lefthook.yml  mock_llamacpp_server.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  set-vercel-env.sh  setup_model_servers.sh  test_auth.py  vercel-deploy-commands.sh  vercel.json
ForgeTM/apps/backend/: Dockerfile  README.md  alembic.ini  celery_worker.py  cosmic-ray.conf  forgetm.db  justfile  mkdocs.yml  noxfile.py  pyproject.toml  setup.py  test_phase5_integration.py
ForgeTM/apps/backend/.devcontainer/: devcontainer.json
ForgeTM/apps/backend/.github/workflows/: python-ci.yml  release.yml
ForgeTM/apps/backend/site/: 404.html  index.html  objects.inv
ForgeTM/apps/backend/tests/: conftest.py  test_health.py  test_litellm.py  test_property_based.py  test_tasks.py
apps/goblin-assistant/backend/: MAIN_REFACTORING_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  STREAM_REFACTORING_SUMMARY.md  Untitled-1.json  __init__.py  account_router.py  api_router.py  async_database.py  auth_service.py  backend.py  cache_manager.py  celery_app.py  chat_router.py  check_runpod_deployments.py  dashboard_router.py  database.py  errors.py  execute_router.py  fix_database_connection.py  gateway_service.py  goblin_assistant.db  health_router.py  inference_clients.py  local_llm_proxy.py  main.py  models_base.py  monitoring.py  opentelemetry_config.py  parse_router.py  probe_single_provider.py  probe_worker.py  providers_management_router.py  pyproject.toml  pyrightconfig.json  pytest.ini  rag_router.py  raptor_router.py  (+31 more)
apps/goblin-assistant/backend/api/: chat_backend.py
apps/goblin-assistant/backend/auth/: api_key_store.py  api_keys_router.py  auth_router.py  challenge_store.py  dependencies.py  google_oauth.py  secrets_manager.py
apps/goblin-assistant/backend/config/: __init__.py  cloud_providers.py  llm_env.example  model_servers.py
apps/goblin-assistant/backend/docs/: ENVIRONMENT_VARIABLES.md  MCP_TOOLS.md  ROUTING_REFACTORING.md
apps/goblin-assistant/backend/health/: all_router.py  core_router.py  dashboard_router.py  llm_health.py
apps/goblin-assistant/backend/inference/: __init__.py  chat_fallback.py  model_loader.py
apps/goblin-assistant/backend/jobs/: cleanup.py  provider_health.py  system_health.py
apps/goblin-assistant/backend/middleware/: licensing_middleware.py  logging_middleware.py  rate_limiter.py  request_id_middleware.py  security_headers.py
apps/goblin-assistant/backend/models/: __init__.py  model.py  provider.py  routing.py  search.py  settings.py  task.py  user.py
apps/goblin-assistant/backend/orchestrator/: __init__.py  api_routes.py  cost_optimizer.py  health.py  router.py
apps/goblin-assistant/backend/providers/: __init__.py  anthropic_adapter.py  base_adapter.py  bulkhead.py  circuit_breaker.py  deepseek_adapter.py  gemini_adapter.py  grok_adapter.py  llamacpp.py  llamacpp_adapter.py  llm_env_loader.py  ollama.py  ollama_adapter.py  openai_adapter.py  provider_config.json  provider_registry.py  registry.py  runpod_adapter.py  siliconeflow_adapter.py  tinylama_adapter.py  vastai_adapter.py
apps/goblin-assistant/backend/rag/: __init__.py  chunking.py  embeddings.py  reranker.py  retriever.py  supabase_vector_store.py  vector_store.py
apps/goblin-assistant/backend/routers/: __init__.py  chat_info_router.py  cost_router.py  essay_router.py  generate_router.py  goblins_router.py  orchestrator_router.py  user_auth_router.py
apps/goblin-assistant/backend/schemas/: __init__.py
apps/goblin-assistant/backend/scripts/: check_v1_frozen.py  export_embeddings_onnx.py  test_core_suite.sh
apps/goblin-assistant/backend/security/: __init__.py  secrets.py  signed_urls.py  weight_encryption.py
apps/goblin-assistant/backend/services/: ROUTING_HELPERS_REFACTORING.md  __init__.py  autoscaling_service.py  chat_cache_manager.py  chat_compression_handler.py  chat_context.py  chat_controller.py  chat_controller_helpers.py  chat_controller_refactored.py  chat_error_formatter.py  chat_error_handler.py  chat_handler.py  chat_handler_helpers.py  chat_metrics_collector.py  chat_orchestrator.py  chat_provider_selector.py  chat_rate_limiter.py  chat_response_builder.py  chat_response_formatter.py  chat_retry_handler.py  chat_router_helpers.py  chat_service.py  chat_session_manager.py  chat_timeout_handler.py  chat_validator.py  config_processor.py  encryption.py  enhanced_rag_service.py  enhanced_routing.py  fallback_handler.py  gateway_exceptions.py  gcp_warmup.py  generate_circuit_breaker.py  generate_cost.py  generate_helpers.py  generate_models.py  generate_providers.py  generate_router.py  generate_service.py  goblin_executor.py  (+35 more)
apps/goblin-assistant/backend/tasks/: __init__.py  batch_tasks.py  celery_app.py  inference_tasks.py  model_training_worker.py  provider_probe_worker.py  training_tasks.py
apps/goblin-assistant/backend/tests/: conftest.py  load_test.py  test_auth_resilience.py  test_consolidated_auth.py  test_error_mapping.py  test_essay_redirect.py  test_provider_client.py  test_resilience_integration.py  test_settings.py  test_settings_router_masking.py
(+727 files in other folders)
