[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "goblin-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Goblin Assistant"
requires-python = ">=3.11"
authors = [{ name = "Fuaad Abdullah", email = "fuaad@example.com" }]

[tool.poetry]
name = "goblin-assistant-backend"
version = "0.1.0"
description = "FastAPI backend for Goblin Assistant"
authors = ["Fuaad Abdullah <fuaad@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
starlette = "^0.27.0"
uvicorn = "^0.24.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
ruff = "^0.0.292"
mypy = "^1.5.0"
pytest-xdist = "^3.3.0"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # Imported but unused
"tests/*" = ["ARG001"]   # Unused arguments in tests

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "starlette.*"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=.
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=80
"""
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
]

# Coverage configuration
[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__main__.py",
    "*/backend/test_*.py",
    "*/backend/**/test_*.py",
    "*/backend/tasks/*",
    "*/backend/jobs/*",
    "*/backend/providers/*",
    "*/backend/orchestrator/*",
    "*/backend/rag/*",
    "*/backend/inference/*",
    "*/backend/mock_*",
    "*/backend/**/mock_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
